RESOLVED FIXED241602
CrashTracer: MobileSafari at UIKitCore: -[UITextSearchingFindSession foundRange:forSearchString:inDocument:]
https://bugs.webkit.org/show_bug.cgi?id=241602
Summary CrashTracer: MobileSafari at UIKitCore: -[UITextSearchingFindSession foundRan...
Aditya Keerthi
Reported 2022-06-14 10:18:42 PDT
...
Attachments
Aditya Keerthi
Comment 1 2022-06-14 10:18:59 PDT
Aditya Keerthi
Comment 2 2022-06-14 10:37:20 PDT
EWS
Comment 3 2022-06-14 13:53:44 PDT
Committed r295534 (251539@main): <https://commits.webkit.org/251539@main> Reviewed commits have been landed. Closing PR #1507 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.